--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2",
     "react-snowfall": "^2.4.0"
