--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.25",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
