--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@gsap/react": "^2.1.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.7.0",
-    "framer-motion": "^12.23.25",
+    "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.2",
-    "react-snowfall": "^2.4.0"
+    "react-snowfall": "^2.4.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
