--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
