--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-router-dom": "^6.30.2",
     "react-snowfall": "^2.4.0",
     "swiper": "^12.0.3"
