--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.30.2",
     "react-snowfall": "^2.4.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.6",
+    "@babel/preset-env": "^7.28.6",
+    "@babel/preset-react": "^7.28.5",
     "@eslint/js": "^9.39.2",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
