--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.14.2",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
+    "prerender-node": "^3.8.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^9.1.0",
